syntax = "proto3";

package user_api_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/KamigamiNoGigan/grpc/pkg/server_api;server_api";

service userAPI {
	rpc Upload(stream UploadRequest) returns (google.protobuf.BoolValue);
	rpc GetInfo(google.protobuf.Empty) returns (FileList);
    rpc Download(DownloadRequest) returns (stream DownloadResponse);
} 

message UploadRequest {
    oneof data {
        string file_name = 1;
        bytes chunk_data = 2;
    }
}

message Info {
	string file_name = 1;
	google.protobuf.Timestamp created_at = 2;
	google.protobuf.Timestamp updated_at = 3;
}

message FileList {
    repeated Info files = 1;
}

message DownloadRequest {
	string file_name = 1;
}

message DownloadResponse {
	bytes chunk_data = 1;
}